Version 1.8.0-dev
  * Update OGC API - Processes documentation
  * Add open-api directory in utils services containing a reddis
  subscription example, the HTML UI and the display service using
  Cheetah templating system
  * Update the oas.cfg file to reflect new api definition
  * Include basic microdata in the HTML home page 
  * Add HTML support for basic interractions with OGC API - Processes
  including execution of service from the service-desc link
  * OGC API - Processes added support for syncrhonous Execute requests
  * Reuse service_callback in OGC API - Processes when subscriber
  object is provided in the JSON request
  * OGC API - Processes implementation as available on 2020-10-19
  * Produce value string only when memory=load for Python support.
  * Make local files uris usable when cache is used
  * Make GDAL/profile service usable in case memory=protect 
  * Add Dockerfile and docker-compose environment with pgbouncer, see #177
  * Add documentation on how to use asyncrhonous execution using the Javascript
  ZOO-API
  * Start simplification of the runRequest function
  * Integrate optional support for OGC API - Processing implementation
  * Add the optional handleText parameter to provide pure text for
  complex data node with mimetype="text/*"
  * Fix issue in case JavaScript support is activated
  * Fix issue with GDAL profile service
  * Fix #172 for https support 
Version 1.7.0
  * Fix issue with UOM definitions in zcfg2sql
  * Make callback and HPC support independent from each other
  * Update SAGA-GIS support to version 7.2.0
  * Add support for custom MapServer style definition for raster output
  * Fix returned bbox definition #170 
  * Store semaphore status in lenv section for future deletion 
  * Update Windows support to newer compiler
  * Fix issue with UpdateStatus function from the Mono ZOO-API
  * Add logging functionality and other utility functions to the C-API
  * Return an exception for every output for which nb_pixel or